--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,9 +6,9 @@ server.port=9099
 virtual.filePath=/data/yb/files/
 virtual.accessPath=/files/**
 
-spring.datasource.url=jdbc:mysql://118.31.120.41:3306/chk_pd_38?zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/chk_pd?zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=51etcadmin
+spring.datasource.password=123456
 
 wx.appId=wx36363735ab5c2820
 wx.appSecret=641a4887c143c6f2374945a1005e8a76
