--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,18 +6,36 @@ server.port=9099
 virtual.filePath=/data/yb/files/
 virtual.accessPath=/files/**
 
+wx.appId=wx36363735ab5c2820
+wx.appSecret=641a4887c143c6f2374945a1005e8a76
+
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/chk_pd?zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=123456
-
-wx.appId=wx36363735ab5c2820
-wx.appSecret=641a4887c143c6f2374945a1005e8a76
 
 spring.mail.host=smtp.163.com
 spring.mail.port=465
 spring.mail.username=ybdream36@163.com
 spring.mail.password=1qaz2wsx
 spring.mail.default-encoding=UTF-8
+
+
+
+#spring.datasource.url=jdbc:mysql://116.62.26.69:3306/chk_pd?zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+#spring.datasource.username=edith-w
+#spring.datasource.password=qwerDF123
+
+#virtual.filePath=/chk-pd/files/
+#virtual.accessPath=/files/**
+#wx.appId=wx82252aab6c844393
+#wx.appSecret=363e5b2f692ca834e18cd789345c0a1a
+#
+#spring.mail.host=smtp.qiye.aliyun.com
+#spring.mail.port=465
+#spring.mail.username=xcx@chinahongke.com
+#spring.mail.password=Hk+88462587
+#spring.mail.default-encoding=UTF-8
+
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
